server/server-err.log
SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (D:\Project\SAPI_Project\server\node_modules\body-parser\lib\types\json.js:92:19)
    at D:\Project\SAPI_Project\server\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:214:14)
    at invokeCallback (D:\Project\SAPI_Project\server\node_modules\raw-body\index.js:238:16)
    at done (D:\Project\SAPI_Project\server\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (D:\Project\SAPI_Project\server\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:508:28)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  expose: true,
  statusCode: 400,
  status: 400,
  body: '{\\',
  type: 'entity.parse.failed'
}
SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (D:\Project\SAPI_Project\server\node_modules\body-parser\lib\types\json.js:92:19)
    at D:\Project\SAPI_Project\server\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:214:14)
    at invokeCallback (D:\Project\SAPI_Project\server\node_modules\raw-body\index.js:238:16)
    at done (D:\Project\SAPI_Project\server\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (D:\Project\SAPI_Project\server\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:508:28)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  expose: true,
  statusCode: 400,
  status: 400,
  body: '{\\',
  type: 'entity.parse.failed'
}
SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (D:\Project\SAPI_Project\server\node_modules\body-parser\lib\types\json.js:92:19)
    at D:\Project\SAPI_Project\server\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:214:14)
    at invokeCallback (D:\Project\SAPI_Project\server\node_modules\raw-body\index.js:238:16)
    at done (D:\Project\SAPI_Project\server\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (D:\Project\SAPI_Project\server\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:508:28)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  expose: true,
  statusCode: 400,
  status: 400,
  body: '{\\',
  type: 'entity.parse.failed'
}
(node:10464) [MONGOOSE] Warning: mongoose: the `new` option for `findOneAndUpdate()` and `findOneAndReplace()` is deprecated. Use `returnDocument: 'after'` instead.
(Use `node --trace-warnings ...` to show where the warning was created)
^C^C